ros_embedded/log/build_2023-06-03_14-27-52/serial_rw/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/pi/ros_embedded/install/serial_rw/lib/python3.10/site-packages/serial_rw/serial_rw.py", line 36
    publisher = node.create_publisher(String, node.get_namepace) + '/pico_readings', 10)
                                                                                       ^
SyntaxError: unmatched ')'

